<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/baddelGray"
    android:layout_height="match_parent"
    tools:context="baddel.baddelstationapp.verifyMobileNumberActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baddelheader"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/headerImageWidth"
            android:layout_height="@dimen/headerImageHeight"
            android:src="@drawable/baddelogobrandname" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textColor="@color/baddelGreen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/verMobileNumberTittleSTR"
        android:id="@+id/verMobileNumberTittleTV"
        android:layout_marginTop="95dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:hint="@string/verMobileNumberSTR"
        android:textSize="@dimen/textSize"
        android:textColor="@color/baddelFontColor"
        android:textColorHint="@color/baddelFontColor"
        android:padding="6dp"
        android:id="@+id/verMobileNumberET"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/baddelGreen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/verMobileNumberMessageSTR"
        android:id="@+id/verMobileNumberMessageTV"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/verMobileNumberET"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/verMobileNumberNextBT"
        android:layout_width="@dimen/footerButtonWidth"
        android:layout_height="@dimen/footerButtonHeight"
        android:layout_marginBottom="75dp"
        android:textColor="@color/baddelFontColor"
        android:background="@drawable/buttonshape"
        android:text="@string/enterPhoneNumberNextSTR"
        android:padding="20dp"
        android:textSize="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp" />

    <Button
        android:id="@+id/verMobileNumberCancelBT"
        android:layout_width="@dimen/footerButtonWidth"
        android:layout_height="@dimen/footerButtonHeight"
        android:text="@string/enterPhoneNumberCancelSTR"
        android:textColor="@color/baddelFontColor"
        android:background="@drawable/buttonshape"
        android:padding="20dp"
        android:textSize="40dp"
        android:layout_alignBaseline="@+id/verMobileNumberNextBT"
        android:layout_alignBottom="@+id/verMobileNumberNextBT"
        android:layout_toLeftOf="@+id/verMobileNumberMessageTV"
        android:layout_toStartOf="@+id/verMobileNumberMessageTV"
        android:layout_marginRight="66dp"
        android:layout_marginEnd="66dp" />

    <Button
        android:id="@+id/verMobileNumberResendBT"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/footerButtonHeight"
        android:text="@string/verMobileNumberResendSTR"
        android:textColor="@color/baddelFontColor"
        android:background="@drawable/buttonshape"
        android:padding="20dp"
        android:textSize="20dp"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/verMobileNumberNextBT"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
