<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/baddelGray"
    android:layout_height="match_parent"
    tools:context="baddel.baddelstationapp.confirmSMSActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baddelheader"
        android:gravity="center"
        android:id="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/headerImageWidth"
            android:layout_height="@dimen/headerImageHeight"
            android:src="@drawable/baddelogobrandname" />
    </LinearLayout>


    <Button
        android:id="@+id/confirmSMSCancelBT"
        android:layout_width="@dimen/footerButtonWidth"
        android:layout_height="@dimen/footerButtonHeight"
        android:text="@string/enterPhoneNumberCancelSTR"
        android:textColor="@color/baddelFontColor"
        android:background="@drawable/buttonshape"
        android:padding="20dp"
        android:textSize="@dimen/textSize"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:layout_alignBaseline="@+id/confirmSMSNextBT"
        android:layout_alignBottom="@+id/confirmSMSNextBT"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:textColor="@color/baddelGreen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirmSMSTittleSTR"
        android:lines="2"
        android:gravity="center"
        android:id="@+id/confirmSMSTittleTV"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="81dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/confirmSMSNextBT"
        android:layout_width="@dimen/footerButtonWidth"
        android:layout_height="@dimen/footerButtonHeight"
        android:layout_marginBottom="55dp"
        android:textColor="@color/baddelFontColor"
        android:background="@drawable/buttonshape"
        android:text="@string/enterPhoneNumberNextSTR"
        android:padding="20dp"
        android:textSize="@dimen/textSize"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/confirmSMSMobileNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmSMSTittleTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:textColor="@color/baddelFontColor"
        android:textSize="@dimen/textSize"

         />

    <Button
        android:id="@+id/confirmSMSnoSMSBT"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/footerButtonHeight"
        android:padding="5dp"
        android:background="@color/baddelGreen"
        android:textColor="@color/baddelFontColor"
        android:text="@string/confirmSMSnoSMSSTR"
        android:layout_above="@+id/confirmSMSchangeMobileNumberBT"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />

    <Button
        android:id="@+id/confirmSMSchangeMobileNumberBT"
        android:text="@string/confirmSMSchangeMobileNumberSTR"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/footerButtonHeight"

        android:padding="5dp"
        android:background="@color/baddelGreen"
        android:textColor="@color/baddelFontColor"
        android:layout_above="@+id/confirmSMSNextBT"
        android:layout_marginBottom="18dp"
        android:layout_alignLeft="@+id/confirmSMSnoSMSBT"
        android:layout_alignStart="@+id/confirmSMSnoSMSBT" />

</RelativeLayout>
